add updated files

--- a/frontend/indext.html
+++ b/frontend/indext.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FreshPoint - Loyalty Rewards</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/mo.js/0.288.2/mo.min.js"></script>
 </head>
 <body>
     <div class="container">
@@ -140,6 +141,12 @@
         </div>
     </div>
 
+    <!-- Love Animation Message -->
+    <div id="message">
+  <span>We </span>
+  <span id="changing-word">love</span>
+  <span> you</span>
+</div>
     <script src="app.js"></script>
 </body>
 </html>
