--- a/frontend/indext.html
+++ b/frontend/indext.html
@@ -6,7 +6,6 @@
     <title>FreshPoint - Loyalty Rewards</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/mo.js/0.288.2/mo.min.js"></script>
 </head>
 <body>
     <div class="container">
@@ -18,7 +17,7 @@
             </div>
             
             <!-- Login Form -->
-            <div id="login-form" class="form-container">
+            <div id="loginForm" class="form-container">
                 <h2>Welcome Back!</h2>
                 <form id="loginForm">
                     <div class="input-group">
@@ -33,7 +32,7 @@
             </div>
             
             <!-- Signup Form -->
-            <div id="signup-form" class="form-container hidden">
+            <div id="signupForm" class="form-container hidden">
                 <h2>Join FreshPoint!</h2>
                 <form id="signupForm">
                     <div class="input-group">
